syntax = "proto3";

option java_package = "study.huhao.demo.adapters.grpc";

service Blog {
  rpc create(CreateBlogRequest) returns (BlogDto) {}
}

message CreateBlogRequest {
  string title = 1;
  string body = 2;
  string authorId = 3;
}

message BlogDto {
  string id = 1;
  string title = 2;
  string body = 3;
  string authorId = 4;
  BlogStatus status = 5;
  string createdAt = 6;
  string savedAt = 7;

  enum BlogStatus {
    Draft = 0;
    Published = 1;
  }
}

